--- a/server/data/greetings.yml
+++ b/server/data/greetings.yml
@@ -51,3 +51,17 @@ conversations:
   - Nothing much.
 - - What's up?
   - The sky's up but I'm fine thanks. What about you?
+- - Good Morning
+  - Good Morning
+- - Good Noon
+  - Good Noon
+- - Good Evening
+  - Good Evening
+- - Thanks
+  - You are welcome
+- - Thank You
+  - My Pleasure
+- - Good Bye
+  - Bye
+- - It was nice talking to you
+  - Nice talking to you as well
