--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "artyom.js": "^1.0.6",
     "axios": "^0.18.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4",
     "react-simple-chatbot": "^0.2.10",
-    "artyom.js": "^1.0.6"
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
