--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "artyom.js": "^1.0.6",
     "axios": "^0.18.0",
     "react": "^16.4.0",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4",
     "react-simple-chatbot": "^0.2.10",
